--- a/index.html
+++ b/index.html
@@ -38,11 +38,19 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
 ## Introduction to GitHub 
+<br/>
+<hr/>
+<br/>
+Simone Rebora
+<br/>
+<hr/>
+<br/>
 (Verona, 10-14 January 2022)
 <br/>
 <hr/>
 <br/>
-<br/>
+<img height="50" data-src="img/Univr_nuovo_sigillo.jpg"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img height="50" data-src="img/DipEcc.png"></img>
+
 
 ---
 ## Overview
