--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 ## Introduction to GitHub 
 <br/>
 <br/>
-Simone Rebora
+**Simone Rebora**
 <br/>
 <br/>
 <br/>
