--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <!-- Any section element inside of this container is displayed as a slide -->
 
 
-## Introduction to GitHub 
+# Introduction to GitHub 
 <br/>
 <br/>
-**Simone Rebora**
-<br/>
-<br/>
-<br/>
+## Simone Rebora
 <br/>
 <br/>
 <br/>
-(Verona, 10-14 January 2022)
+<br/>
+<br/>
+<br/>
+*(Verona, 10-14 January 2022)*
 <br/>
 <br/>
 <br/>
