--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>
 <br/>
 <br/>
-<br/>
-*(Verona, 10-14 January 2022)*
-<br/>
+*Verona, 10-14 January 2022*
 <br/>
 <br/>
-<img height="100" data-src="img/Univr_nuovo_sigillo.jpg"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img height="100" data-src="img/DipEcc.png"></img>
+<br/>
+<img height="100" data-src="img/Univr_nuovo_sigillo.jpg"></img>          <img height="100" data-src="img/DipEcc.png"></img>
 
 
 ---
