--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <!-- Any section element inside of this container is displayed as a slide -->
 
 
-# Introduction to GitHub 
+<img height="100" data-src="img/immagine065310.jpeg"></img>
+# GitHub for Digital Humanities 
 <br/>
 <br/>
 ## Simone Rebora
@@ -45,34 +46,34 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>
 <br/>
 <br/>
-<br/>
 *Verona, 10-14 January 2022*
 <br/>
 <br/>
-<br/>
-<img height="100" data-src="img/Univr_nuovo_sigillo.jpg"></img>          <img height="100" data-src="img/DipEcc.png"></img>
+<img height="100" data-src="img/Univr_nuovo_sigillo.jpg"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img height="100" data-src="img/DipEcc.png"></img>
+
+
 
 
 ---
 ## Overview
 <br/>
-1. Day 1 
-2. Day 2
-3. Day 3
+1. Day 1. What is GitHub?
+2. Day 2. How does GitHub work?
+3. Day 3. GitHub and research projects
 
 
 ---
 # Day 1
 
 --
-## Subject 1 
+## What is GitHub? 
 <br/>
-* first topic
-* second topic
+* not just a place, but a community
+* a place where to store documents and scripts
+* a place where to share and work together
 
 --
-## Subject 2
-<a href="img/Img1.png"><img height="500" data-src="img/Img1.png"></img></a>
+## Let's explore GitHub 
 
 
 
