--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 ---
 ## Overview
 <br/>
-Day 1. What is GitHub?  
-Day 2. How does GitHub work?  
-Day 3. GitHub and research projects
+- Day 1. What is GitHub?  
+- Day 2. How does GitHub work?  
+- Day 3. GitHub and research projects
 <br/>
 <br/>
 <img height="180" data-src="img/immagine065310.jpeg"></img>
