--- a/index.html
+++ b/index.html
@@ -69,14 +69,29 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 --
 ## What is GitHub? 
 <br/>
-* not just a place, but a community
-* a place where to store documents and scripts
-* a place where to share and work together
+- not just a place, but a community
+- a place where to store documents and scripts
+- a place where to share and work together
 
 --
 ## Let's explore GitHub 
 
+...starting from [my GitHub profile](https://github.com/SimoneRebora)
 
+--
+## First activity
+
+Create your own GitHub profile!
+- browse to github.com
+- click on Sign Up!
+<br/>
+<br/>
+<img height="180" data-src="img/GitHub_signup.png"></img>
+
+--
+## Second activity
+
+Create a GitHub repository
 
 </script>
 </section>
