--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@ Create your own GitHub profile!
 - click on Sign Up!
 <br/>
 <br/>
-<img height="180" data-src="img/GitHub_signup.png"></img>
+<img height="300" data-src="img/GitHub_signup.png"></img>
 
 --
 ## Second activity
 
 Create a GitHub repository
+- [define title, visibility, license...]
+- [update the README.md file using [markdown] syntax]
+- [update a file frm your computer]
+- [change the visibility]
 
 </script>
 </section>
