--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ Create your own GitHub profile!
 ## Second activity
 
 Create a GitHub repository
-- [define title, visibility, license...]
-- [update the README.md file using [markdown] syntax]
-- [update a file frm your computer]
-- [change the visibility]
+- define title, visibility, license...
+- [update the README.md file using [markdown](https://www.markdownguide.org/cheat-sheet/) syntax](#/2)
+- [update a file frm your computer](#/3)
+- [change visibility](#/4)
 
 </script>
 </section>
