--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ Create your own GitHub profile!
 
 Create a GitHub repository
 - define title, visibility, license...
-- [update the README.md file using [markdown](https://www.markdownguide.org/cheat-sheet/) syntax](#/2)
-- [update a file frm your computer](#/3)
-- [change visibility](#/4)
+- update the README.md file using [markdown](https://www.markdownguide.org/cheat-sheet/) syntax<!-- .element: class="fragment" data-fragment-index="1" -->
+- update a file frm your computer<!-- .element: class="fragment" data-fragment-index="2" -->
+- change visibility<!-- .element: class="fragment" data-fragment-index="3" -->
 
 </script>
 </section>
