--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ Create your own GitHub profile!
 
 Create a GitHub repository
 - define title, visibility, license...
-- update the README.md file using [markdown](https://www.markdownguide.org/cheat-sheet/) syntax<!-- .element: class="fragment" data-fragment-index="1" -->
+- update the README.md file using markdown syntax<!-- .element: class="fragment" data-fragment-index="1" -->
+    - [markdown cheat-sheet](https://www.markdownguide.org/cheat-sheet/)<!-- .element: class="fragment" data-fragment-index="1" -->
 - update a file frm your computer<!-- .element: class="fragment" data-fragment-index="2" -->
 - change visibility<!-- .element: class="fragment" data-fragment-index="3" -->
 
