--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Create your own GitHub profile!
 - click on Sign Up!
 <br/>
 <br/>
-<img height="300" data-src="img/GitHub_signup.png"></img>
+<img height="350" data-src="img/GitHub_signup.png"></img>
 
 --
 ## Second activity
@@ -95,8 +95,19 @@ Create a GitHub repository
 - define title, visibility, license...
 - update the README.md file using markdown syntax<!-- .element: class="fragment" data-fragment-index="1" -->
     - [markdown cheat-sheet](https://www.markdownguide.org/cheat-sheet/)<!-- .element: class="fragment" data-fragment-index="1" -->
-- update a file frm your computer<!-- .element: class="fragment" data-fragment-index="2" -->
+- update a file from your computer<!-- .element: class="fragment" data-fragment-index="2" -->
 - change visibility<!-- .element: class="fragment" data-fragment-index="3" -->
+
+--
+## Additional activities
+- create a Wiki for your project<!-- .element: class="fragment" data-fragment-index="1" -->
+- find and star other people's projects<!-- .element: class="fragment" data-fragment-index="2" -->
+- create an issue on other people's projects<!-- .element: class="fragment" data-fragment-index="3" -->
+
+--
+## Preparation for second day
+**Important**: verify that Git is correctly installed on your computer!
+<img height="350" data-src="img/Git-logo.png"></img>
 
 </script>
 </section>
