--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@ Create a GitHub repository
 
 --
 ## Preparation for second day
-**Important**: verify that Git is correctly installed on your computer!
 <br/>
-<img height="350" data-src="img/Git-logo.png"></img>
+**Important**: verify that Git is correctly installed  
+on your computer!
+<br/>
+<img height="250" data-src="img/Git-logo.png"></img>
 
 </script>
 </section>
