--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ Create a GitHub repository
 
 --
 ## Additional activities
-- create a Wiki for your project<!-- .element: class="fragment" data-fragment-index="1" -->
-- find and star other people's projects<!-- .element: class="fragment" data-fragment-index="2" -->
-- create an issue on other people's projects<!-- .element: class="fragment" data-fragment-index="3" -->
+- create a Wiki for your repository<!-- .element: class="fragment" data-fragment-index="1" -->
+- follow/star other people's profiles/repositories<!-- .element: class="fragment" data-fragment-index="2" -->
+- create an issue on other people's repositories<!-- .element: class="fragment" data-fragment-index="3" -->
 
 --
 ## Preparation for second day
