--- a/index.html
+++ b/index.html
@@ -112,6 +112,56 @@ on your computer!
 <br/>
 <img height="250" data-src="img/Git-logo.png"></img>
 
+
+---
+# Day 2
+
+--
+## How does GitHub work? 
+<br/>
+The goal: learn how to use the [Git](https://git-scm.com/) version-control language  
+(...which **is not** GitHub!)
+<br/>
+<img height="250" data-src="img/Git-logo.png"></img>
+
+--
+## First activity
+Get acquainted with Git and command line
+- create a GitHub folder on your computer
+- browse to reach it
+- clone your repository into it 
+
+--
+## Second activity
+
+
+--
+## Additional activities
+
+
+
+---
+# Day 3
+
+--
+## GitHub and research projects
+Main task: Learn the GitHub workflow
+<br/>
+<img height="250" data-src="img/Git-flow.png"></img>
+
+
+--
+## First activity
+
+
+--
+## Second activity
+
+
+--
+## Additional activities
+
+
 </script>
 </section>
 
