--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ Create a GitHub repository
 **Important**: verify that Git is correctly installed  
 on your computer!
 <br/>
+<br/>
 <img height="250" data-src="img/Git-logo.png"></img>
 
 
@@ -121,6 +122,7 @@ on your computer!
 <br/>
 The goal: learn how to use the [Git](https://git-scm.com/) version-control language  
 (...which **is not** GitHub!)
+<br/>
 <br/>
 <img height="250" data-src="img/Git-logo.png"></img>
 
@@ -145,7 +147,9 @@ Get acquainted with Git and command line
 
 --
 ## GitHub and research projects
-Main task: Learn the GitHub workflow
+<br/>
+Main goal: Learn the GitHub workflow
+<br/>
 <br/>
 <img height="250" data-src="img/Git-flow.png"></img>
 
