--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@ Get acquainted with Git and command line
 - clone your repository into it 
 
 --
-## Second activity
+## Today's activities
+- Clone a repository
+- Pull changes
+- Push changes
 
+You can find a simple tutorial [here](https://github.com/SimoneRebora/GitHubVerona2022/blob/main/docs/git_commands.md)
 
 --
 ## Additional activities
