--- a/index.html
+++ b/index.html
@@ -143,8 +143,11 @@ You can find a simple tutorial [here](https://github.com/SimoneRebora/GitHubVero
 
 --
 ## Additional activities
-
-
+<br/>
+Create a webpage using GitHub
+<br/>
+<br/>
+You can find a (very simple) tutorial [here](https://github.com/SimoneRebora/GitHubVerona2022/blob/main/docs/webpage_tutorial.md)
 
 ---
 # Day 3
