--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@ Main goal: Learn the GitHub workflow
 
 
 --
-## First activity
-
-
+## Today's activities
+- Open an issue in one repository
+- Fork a repository and send a pull request
+- Add a collaborator and let him/her create a branch
+<br/>
+As usual, you can find a tutorial [here](https://github.com/SimoneRebora/GitHubVerona2022/blob/main/tutorials/collaborate.md)
 --
-## Second activity
 
-
---
 ## Additional activities
-
+Save a repository to Zenodo, i.e. give it a DOI
 
 </script>
 </section>
