--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@ Create a GitHub repository
 
 --
 ## Additional activities
-- create a Wiki for your repository<!-- .element: class="fragment" data-fragment-index="1" -->
-- follow/star other people's profiles/repositories<!-- .element: class="fragment" data-fragment-index="2" -->
-- create an issue on other people's repositories<!-- .element: class="fragment" data-fragment-index="3" -->
+- follow/star other people's profiles/repositories
+- create a Wiki for your repository
 
 --
 ## Preparation for second day
@@ -131,7 +130,9 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 Get acquainted with Git and command line
 - create a GitHub folder on your computer
 - browse to reach it
-- clone your repository into it 
+- clone your repository into it  
+<br/>
+<sub>Note: also **many** visual interfaces exist for Git (see [here](https://git-scm.com/downloads/guis)), but command line is the only cross-platform, stable way to do things</sub>
 
 --
 ## Today's activities
