--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@ Create a GitHub repository
 - define title, visibility, license...
 - update the README.md file using markdown syntax<!-- .element: class="fragment" data-fragment-index="1" -->
     - [markdown cheat-sheet](https://www.markdownguide.org/cheat-sheet/)<!-- .element: class="fragment" data-fragment-index="1" -->
-- update a file from your computer<!-- .element: class="fragment" data-fragment-index="2" -->
-- change visibility<!-- .element: class="fragment" data-fragment-index="3" -->
+- create a file online<!-- .element: class="fragment" data-fragment-index="2" -->
+- update a file from your computer<!-- .element: class="fragment" data-fragment-index="3" -->
+- change visibility<!-- .element: class="fragment" data-fragment-index="4" -->
 
 --
 ## Additional activities
@@ -168,11 +169,13 @@ Main goal: Learn the GitHub workflow
 - Fork a repository and send a pull request
 - Add a collaborator and let him/her create a branch
 <br/>
+<br/>
 As usual, you can find a tutorial [here](https://github.com/SimoneRebora/GitHubVerona2022/blob/main/tutorials/collaborate.md)
 
 
 --
 ## Additional activities
+<br/>
 Save a repository to Zenodo, i.e. give it a DOI
 
 </script>
