--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Get acquainted with Git and command line
 - browse to reach it
 - clone your repository into it  
 <br/>
-<sub>Note: also **many** visual interfaces exist for Git (see [here](https://git-scm.com/downloads/guis)), but command line is the only cross-platform, stable way to do things</sub>
+Note: also **many** visual interfaces exist for Git (see [here](https://git-scm.com/downloads/guis)), but command line is the only cross-platform, stable way to do things
 
 --
 ## Today's activities
