--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 Get acquainted with Git and command line
 - create a GitHub folder on your computer
 - browse to reach it
-- clone your repository into it  
+- clone your repository into it
 
-Note: also **many** visual interfaces exist for Git (see [here](https://git-scm.com/downloads/guis)), but command line is the only cross-platform, stable way to do things
+Note: also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
+...but command line is the only cross-platform, stable way to do things
 
 --
 ## Today's activities
