--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Get acquainted with Git and command line
 - create a GitHub folder on your computer
 - browse to reach it
 - clone your repository into it
-
+- done!  
 Note: also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
 ...but command line is the only cross-platform, stable way to do things
 
