--- a/index.html
+++ b/index.html
@@ -126,15 +126,23 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 <br/>
 <img height="250" data-src="img/Git-logo.png"></img>
 
+
 --
 ## First activity
 Get acquainted with Git and command line
 - create a GitHub folder on your computer
 - browse to reach it
 - clone your repository into it
-- done!  
-Note: also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
+
+
+--
+## Graphical interfaces vs. command line
+<br/>
+Also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
 ...but command line is the only cross-platform, stable way to do things
+<br/>
+<img height="250" data-src="img/Git-logo.png"></img>
+
 
 --
 ## Today's activities
