--- a/index.html
+++ b/index.html
@@ -139,9 +139,11 @@ Get acquainted with Git and command line
 ## Graphical interfaces vs. command line
 <br/>
 Also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
-...but command line is the only cross-platform, stable way to do things
 <br/>
-<img height="250" data-src="img/Git-logo.png"></img>
+<sub>...but command line is the only cross-platform, stable way to do things</sub>
+<br/>
+<br/>
+<img height="250" data-src="img/interfaces.png"></img>
 
 
 --
