--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Get acquainted with Git and command line
 <br/>
 Also **many** visual interfaces exist for Git: see [here](https://git-scm.com/downloads/guis)  
 <br/>
-<sub>...but command line is the only cross-platform, stable way to do things</sub>
+...but command line is the only cross-platform, stable tool...
 <br/>
 <br/>
 <img height="250" data-src="img/interfaces.png"></img>
