--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>
 <img height="180" data-src="img/immagine065310.jpeg"></img>
 
+
+--
+## Let's know each other 
+<br/>
+Please fill in this form:  
+[https://bit.ly/GitHubVerona](https://bit.ly/GitHubVerona)
+
+
 ---
 # Day 1
 
