--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 ## Let's know each other 
 <br/>
 Please fill in this form:  
-[bit.ly/GitHubVerona](bit.ly/GitHubVerona)
+[bit.ly/GitHubVerona](https://bit.ly/GitHubVerona)
 
 
 ---
