--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 
 
 --
+## How does GitHub work? 
+<br/>
+<img height="550" data-src="img/Git-push-pull.png"></img>
+
+
+
+--
 ## First activity
 Get acquainted with Git and command line
 - create a GitHub folder on your computer
