--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 --
 ## First activity
 Get acquainted with Git and command line
-- create a GitHub folder on your computer
-- browse to reach it
+- browse your coputer to reach your Desktop
 - clone your repository into it
 
 
