--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ The goal: learn how to use the [Git](https://git-scm.com/) version-control langu
 --
 ## First activity
 Get acquainted with Git and command line
-- browse your coputer to reach your Desktop
+- browse your computer to reach your Desktop
 - clone your repository into it
 
 
