--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@ As usual, you can find a tutorial [here](https://github.com/SimoneRebora/GitHubV
 --
 ## Additional activities
 <br/>
-Save a repository to Zenodo, i.e. give it a DOI
+Save a repository to Zenodo, i.e. give it a DOI  
+<br/>
+More info [here](https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content)
 
 </script>
 </section>
